[workspace]
resolver = "2"
# all crates should be listed here
members = [

    ### Config ###
    "config",

    ### Deployments ###
    # Standalone [Native]
    "apps/deployments/native",
    # Standalone [Native] ODST-mode
    "apps/deployments/odst",
    # Launcher [Web]
    "apps/deployments/web/launcher",
    # Game [Web]
    "apps/deployments/web/game",

    ### Apps ###
    # Launcher
    "apps/launcher",
    # Game
    "apps/game",
    "apps/game/main_menu",
    "apps/game/common",

    ### Services ###
    # Redirector Server
    "services/redirector",
    # Gateway Server
    "services/gateway",
    "services/gateway/http_proto",
    # Content Server
    "services/content",
    # Auth Server
    "services/auth",
    "services/auth/http_proto",
    "services/auth/db",
    "services/auth/types",
    # Region Server
    "services/region",
    "services/region/http_proto",
    # Session Server
    "services/session",
    "services/session/http_proto",
    "services/session/naia_proto",
    # Asset Server
    "services/asset",
    "services/asset/http_proto",
    # Social Server
    "services/social",
    "services/social/http_proto",
    "services/social/types",

    ### Tools ###
    # Automation CLI / Library
    "automation/cli",
    "automation/lib",
]
# any crates with conflicting dependencies / feature flags cannot be put here
default-members = []

[profile.release]
opt-level = 's'
lto = true

[profile.dev]
opt-level = 1
debug-assertions = false

[profile.dev.package."*"]
opt-level = 1