[package]
name = "connorcarpentersite_config"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = ".."
edition = "2021"
publish = false

[features]
local = []
prod = []
client = []
gateway = []
region = []
session = []
content = []
asset = []
auth = []
redirector = []
social = []
odst = []

[dependencies]
cfg-if = { version = "1.0" }