[package]
name = "automation_lib"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
edition = "2021"
publish = false

[features]

[dependencies]
vultr = { path = "../../../cyberlith/automation/crates/vultr" }
executor = { path = "../../../cyberlith/crates/executor" }
asset_serde = { path = "../../../cyberlith/crates/asset/serde", features = ["write_bits", "read_json", "write_json"] }
crypto = { path = "../../../cyberlith/crates/crypto" }
random = { path = "../../../cyberlith/crates/random" }
asset_id = {path = "../../../cyberlith/crates/asset/id" }
logging = { path = "../../../cyberlith/crates/logging" }
git = { path = "../../../cyberlith/crates/git" }
spec = { path = "../../../cyberlith/crates/spec" }

openssh = { version = "0.10" }
async-compat = { version = "0.2" }
once_cell = { version = "1.4.1" }
async-dup = { version = "1.2.2" }
futures-lite = { version = "1.11.3" }
subprocess = "0.2.9"
blake3 = "1.5"

# for "convert_ttf_to_icon"
ttf2mesh = "0.2.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.107" }