[package]
name = "content_server"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
edition = "2021"
publish = false

[features]
local = [ "connorcarpentersite_config/local" ]
prod = [ "connorcarpentersite_config/prod" ]
nodeploy = []

[dependencies]
http_server = { path = "../../../cyberlith/crates/http/http_server" }
http_client = { path = "../../../cyberlith/crates/http/http_client" }
connorcarpentersite_config = { path = "../../config", features = ["content"] }
automation_lib = { path = "../../automation/lib" }
asset_id = { path = "../../../cyberlith/crates/asset/id" }
logging = { path = "../../../cyberlith/crates/logging" }
naia-serde = { path = "../../../naia/shared/serde" }
filecache = { path = "../../../cyberlith/crates/filecache" }

cfg-if = { version = "1.0" }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = { version = "1.0.107" }