[package]
name = "gateway"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
edition = "2021"
publish = false

[features]
local = [ "connorcarpentersite_config/local", "region_server_http_proto/local", "session_server_naia_proto/local" ]
prod = [ "connorcarpentersite_config/prod", "region_server_http_proto/prod", "session_server_naia_proto/prod" ]

[dependencies]
http_server = { path = "../../../cyberlith/crates/http/http_server" }
http_client = { path = "../../../cyberlith/crates/http/http_client" }
connorcarpentersite_config = { path = "../../config", features = ["gateway"]}
logging = { path = "../../../cyberlith/crates/logging" }
naia-serde = { path = "../../../naia/shared/serde" }
timequeue = { path = "../../../cyberlith/crates/timequeue" }
instant = { path = "../../../cyberlith/crates/instant" }

gateway_http_proto = { path = "http_proto" }
region_server_http_proto = { path = "../region/http_proto" }
auth_server_http_proto = { path = "../auth/http_proto" }
auth_server_types = { path = "../auth/types" }
social_server_http_proto = { path = "../social/http_proto" }
session_server_naia_proto = { path = "../session/naia_proto" }

base64 = { version = "0.13" }
cfg-if = { version = "1.0" }