[package]
name = "region_server"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
edition = "2021"
publish = false

[features]
local = [ "connorcarpentersite_config/local", "region_server_http_proto/local" ]
prod = [ "connorcarpentersite_config/prod", "region_server_http_proto/prod" ]

[dependencies]
http_server = { path = "../../../cyberlith/crates/http/http_server" }
http_client = { path = "../../../cyberlith/crates/http/http_client" }
crypto = { path = "../../../cyberlith/crates/crypto" }
connorcarpentersite_config = { path = "../../config", features = ["region"] }
random = { path = "../../../cyberlith/crates/random" }
logging = { path = "../../../cyberlith/crates/logging" }

region_server_http_proto = { path = "http_proto" }
session_server_http_proto = { path = "../session/http_proto" }
asset_server_http_proto = { path = "../asset/http_proto" }
social_server_http_proto = { path = "../social/http_proto" }