[package]
name = "social_server"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
edition = "2021"
publish = false

[features]
local = [ "connorcarpentersite_config/local", "region_server_http_proto/local" ]
prod = [ "connorcarpentersite_config/prod", "region_server_http_proto/prod" ]

[dependencies]
auth_server_types = { path = "../auth/types" }
social_server_types = { path = "types" }
http_server = { path = "../../../cyberlith/crates/http/http_server" }
http_client = { path = "../../../cyberlith/crates/http/http_client" }
connorcarpentersite_config = { path = "../../config", features = ["social"] }
logging = { path = "../../../cyberlith/crates/logging" }

social_server_http_proto = { path = "http_proto" }
region_server_http_proto = { path = "../region/http_proto" }
session_server_http_proto = { path = "../session/http_proto" }

cfg-if = { version = "1.0" }

