[package]
name = "asset_server_http_proto"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../../.."
edition = "2021"
publish = false

[features]

[dependencies]
naia-serde = { path = "../../../../naia/shared/serde" }
http_common = { path = "../../../../cyberlith/crates/http/http_common" }
asset_id = { path = "../../../../cyberlith/crates/asset/id" }